--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Kevin Finn</title>
     <meta name="description" content="" />
     <meta name="image" content="" />
-    <script type="text/javascript" src="/static/js/script.js"></script>
+    <script type="text/javascript" src=""></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
