--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         class="lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
                         <div>
                             <div class="rounded-image mb-4">
-                                <img src="/static/images/profile_image.jpg" alt="Profile Image">
+                                <img src="static/images/profile_image.jpg" alt="Profile Image">
                             </div>
 
                             <h1 class="text-4xl font-bold tracking-tight text-slate-200 sm:text-5xl">
@@ -71,7 +71,7 @@
 
                         <div class="mt-8">
                             <a class="inline-flex items-center font-medium leading-tight text-slate-200 font-semibold text-slate-200 group"
-                                aria-label="View Full Resume" href="/static/cv/Kevin Finn CV.pdf" target="_blank">
+                                aria-label="View Full Resume" href="static/cv/Kevin Finn CV.pdf" target="_blank">
                                 <span>
                                     <span
                                         class="border-b border-transparent pb-px transition group-hover:border-teal-300 motion-reduce:transition-none">View/Download
@@ -142,14 +142,14 @@
                                     industries who is currently seeking to enter the job market in the IT industry.
                                     Achieved Diploma in
                                     <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
-                                        href="/static/cv/Full stack development.pdf" target="_blank"
+                                        href="static/cv/Full stack development.pdf" target="_blank"
                                         rel="noreferrer noopener"
                                         aria-label="Diploma for full stack development (opens in a new tab)">
                                         Full Stack Software Development
                                     </a>
                                     and
                                     <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
-                                        href="/static/cv/IBAT-Certificate.PDF" target="_blank" rel="noreferrer noopener"
+                                        href="static/cv/IBAT-Certificate.PDF" target="_blank" rel="noreferrer noopener"
                                         aria-label="Diploma for Java Programming(opens in a new tab)">
                                         Java fundamentals.
                                     </a>
@@ -423,7 +423,7 @@
                                             <img alt="" loading="lazy" width="200" height="48" decoding="async"
                                                 data-nimg="1"
                                                 class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
-                                                style="color:transparent" src="/static/images/primepulsefull.png" />
+                                                style="color:transparent" src="static/images/primepulsefull.png" />
                                         </div>
                                     </li>
                                     <li class="mb-12">
@@ -465,7 +465,7 @@
                                             <img alt="" loading="lazy" width="200" height="48" decoding="async"
                                                 data-nimg="1"
                                                 class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
-                                                style="color:transparent" src="/static/images/expenseTracker.png" />
+                                                style="color:transparent" src="static/images/expenseTracker.png" />
                                         </div>
                                     </li>
                                     <li class="mb-12">
@@ -510,7 +510,7 @@
                                             <img alt="" loading="lazy" width="200" height="48" decoding="async"
                                                 data-nimg="1"
                                                 class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
-                                                style="color:transparent" src="/static/images/fatima_website.png" />
+                                                style="color:transparent" src="static/images/fatima_website.png" />
                                         </div>
                                     </li>
 
