--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                         <div class="mt-8">
                             <a class="inline-flex items-center font-medium leading-tight text-slate-200 font-semibold text-slate-200 group"
-                                aria-label="View Full Resume" href="static/cv/Kevin Finn CV.pdf" target="_blank">
+                                aria-label="View Full Resume" href="static/cv/Kevin_Finn_CV.pdf" target="_blank">
                                 <span>
                                     <span
                                         class="border-b border-transparent pb-px transition group-hover:border-teal-300 motion-reduce:transition-none">View/Download
