--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="mx-auto min-h-screen max-w-screen-xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
                 <div class="lg:flex lg:justify-between lg:gap-4">
                     <header
-                        class="lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
+                        class=" lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
                         <div>
                             <div class="rounded-image mb-4">
                                 <img src="static/images/profile_image.jpg" alt="Profile Image">
@@ -39,7 +39,8 @@
                                 Kevin Finn
                             </h1>
                             <h2 class="mt-3 text-lg font-medium tracking-tight text-slate-200 sm:text-xl">Full Stack
-                                Developer</h2>
+                                Developer <hr class="header-hr"></h2>
+                                
                             <!-- <p class="mt-4 max-w-xs leading-normal">I build .</p>-->
                             <nav class="nav hidden lg:block" aria-label="In-page jump links">
                                 <ul class="mt-4 w-max">
@@ -138,6 +139,7 @@
                                 <div class="mb-8">
                                     <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 mb-4">About Me
                                     </h2>
+                                    <hr>
                                 </div>
                                 <p class="mb-4">
                                     I am highly motivated, reliable, and well organised individual with a range of
@@ -171,9 +173,10 @@
                         <section id="education" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
                             aria-label="Education">
                             <div
-                                class="sticky top-0 z-20 -mx-6 mb-4 w-full bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:block lg:sticky lg:top-0 lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-100">
+                                class=" top-0 z-20 -mx-6 mb-4 w-full bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:block lg:sticky lg:top-0 lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-100">
                                 <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 mb-4">Education
                                 </h2>
+                                <hr>
                             </div>
 
                             <ol class="group/list">
@@ -380,9 +383,10 @@
                         <section id="projects" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
                             aria-label="Selected projects">
                             <div
-                                class="sticky top-0 z-20 -mx-6 mb-4 w-full bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:block lg:sticky lg:top-0 lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-100">
+                                class=" top-0 z-20 -mx-6 mb-4 w-full bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:block lg:sticky lg:top-0 lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-100">
                                 <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 mb-4">Projects
                                 </h2>
+                                <hr>
                             </div>
                             <div>
                                 <ul class="group/list">
