Add education and changed personal brief

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             )"></div>
             <div class="mx-auto min-h-screen max-w-screen-xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
                 <div class="lg:flex lg:justify-between lg:gap-4">
-                    <header
-                        class=" lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
+                    <header class=" lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
                         <div>
                             <div class="rounded-image mb-4">
                                 <img src="static/images/profile_image.jpg" alt="Profile Image">
@@ -39,8 +38,10 @@
                                 Kevin Finn
                             </h1>
                             <h2 class="mt-3 text-lg font-medium tracking-tight text-slate-200 sm:text-xl">Full Stack
-                                Developer <hr class="header-hr"></h2>
-                                
+                                Developer
+                                <hr class="header-hr">
+                            </h2>
+
                             <!-- <p class="mt-4 max-w-xs leading-normal">I build .</p>-->
                             <nav class="nav hidden lg:block" aria-label="In-page jump links">
                                 <ul class="mt-4 w-max">
@@ -142,29 +143,24 @@
                                     <hr>
                                 </div>
                                 <p class="mb-4">
-                                    I am highly motivated, reliable, and well organised individual with a range of
-                                    experience from various
-                                    industries who is currently seeking to enter the job market in the IT industry.
-                                    Achieved Diploma in
-                                    <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
+                                    Dedicated and adaptable professional with a diverse background spanning various
+                                    industries.
+                                    Proficiently completed a Diploma in <a
+                                        class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
                                         href="static/cv/Full stack development.pdf" target="_blank"
                                         rel="noreferrer noopener"
                                         aria-label="Diploma for full stack development (opens in a new tab)">
                                         Full Stack Software Development
-                                    </a>
-                                    and
-                                    <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
-                                        href="static/cv/IBAT-Certificate.PDF" target="_blank" rel="noreferrer noopener"
+                                    </a> and I'm Oracle Certified in <a
+                                        class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
+                                        href="static/cv/JAVA8OJA.jpg" target="_blank" rel="noreferrer noopener"
                                         aria-label="Diploma for Java Programming(opens in a new tab)">
-                                        Java fundamentals.
-                                    </a>
-                                    Offers advanced expertise in a range of other programming
-                                    languages, including Python (Django), C#, HTML, CSS (Bootstrap, Tailwind),
-                                    JavaScript, MySQL, and
-                                    PostgreSQL. Also has experience working with Agile Methodologies. These skills are
-                                    confirmed by
-                                    extensive training and can be applied in a setting that requires group work or
-                                    working individually.
+                                        Java Foundations Associate.
+                                    </a> Possesses an advanced skill set encompassing Java, Python (Django), C#, HTML,
+                                    CSS (Bootstrap, Tailwind), JavaScript, MySQL, and PostgreSQL. Well-versed in Agile
+                                    Methodologies.
+                                    Adept at thriving in collaborative team environments as well as independently-driven
+                                    projects.
                                 </p>
 
                             </div>
@@ -180,6 +176,54 @@
                             </div>
 
                             <ol class="group/list">
+                                <li class="mb-12">
+                                    <div
+                                        class="group relative grid pb-1 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
+                                        <div
+                                            class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50 lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg">
+                                        </div>
+                                        <header
+                                            class="z-10 mb-2 mt-1 text-xs font-semibold uppercase tracking-wide text-slate-500 sm:col-span-2"
+                                            aria-label="2016 to 2017">2023 - 2024</header>
+                                        <div class="z-10 sm:col-span-6">
+                                            <h3 class="font-medium leading-snug text-slate-200">
+                                                <div>
+                                                    <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
+                                                        href="" target="_blank" rel="noreferrer noopener"
+                                                        aria-label="(opens in a new tab)">
+                                                        <span
+                                                            class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
+                                                        <span>
+                                                            Software Development
+                                                        </span>
+                                                    </a>
+                                                </div>
+                                                <div>
+                                                    <div class="text-slate-500" aria-hidden="true">Future In Tech Cenit
+                                                        College
+                                                    </div>
+                                                </div>
+                                            </h3>
+                                            <ul class="mt-2 flex flex-wrap" aria-label="Technologies used">
+                                                <li class="mr-1.5 mt-2">
+                                                    <div
+                                                        class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">
+                                                        C#</div>
+                                                </li>
+                                                <li class="mr-1.5 mt-2">
+                                                    <div
+                                                        class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">
+                                                        Python</div>
+                                                </li>
+                                                <li class="mr-1.5 mt-2">
+                                                    <div
+                                                        class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">
+                                                        GitHub</div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li class="mb-12">
                                     <div
                                         class="group relative grid pb-1 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
@@ -446,7 +490,8 @@
                                             <div class="z-10 sm:order-2 sm:col-span-6">
                                                 <h3>
                                                     <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
-                                                        href="https://kf-expense-tracker.herokuapp.com/" target="_blank" rel="noreferrer noopener"
+                                                        href="https://kf-expense-tracker.herokuapp.com/" target="_blank"
+                                                        rel="noreferrer noopener"
                                                         aria-label="Expense Tracker Website (opens in a new tab)">
                                                         <span
                                                             class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
