--- a/index.html
+++ b/index.html
@@ -28,25 +28,22 @@
             )"></div>
             <div class="mx-auto min-h-screen max-w-screen-xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
                 <div class="lg:flex lg:justify-between lg:gap-4">
-                    <header class=" lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
+                    <header class="lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
                         <div>
                             <div class="rounded-image mb-4">
                                 <img src="static/images/profile_image.jpg" alt="Profile Image">
                             </div>
 
-                            <h1 class="text-4xl font-bold tracking-tight text-slate-200 sm:text-5xl">
-                                Kevin Finn
-                            </h1>
-                            <h2 class="mt-3 text-lg font-medium tracking-tight text-slate-200 sm:text-xl">Full Stack
-                                Developer
+                            <h1 class="text-4xl font-bold tracking-tight text-slate-200 sm:text-5xl">Kevin Finn</h1>
+                            <h2 class="mt-3 text-lg font-medium tracking-tight text-slate-200 sm:text-xl">
+                                Full Stack Developer
                                 <hr class="header-hr">
                             </h2>
 
-                            <!-- <p class="mt-4 max-w-xs leading-normal">I build .</p>-->
                             <nav class="nav hidden lg:block" aria-label="In-page jump links">
                                 <ul class="mt-4 w-max">
                                     <li>
-                                        <a class="group flex items-center py-3 " href="#about">
+                                        <a class="group flex items-center py-3" href="#about">
                                             <span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span>
                                             <span
@@ -54,7 +51,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="group flex items-center py-3 " href="#education">
+                                        <a class="group flex items-center py-3" href="#education">
                                             <span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span>
                                             <span
@@ -62,7 +59,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="group flex items-center py-3 " href="#projects">
+                                        <a class="group flex items-center py-3" href="#projects">
                                             <span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span>
                                             <span
@@ -78,9 +75,7 @@
                                 aria-label="View Full Resume" href="static/cv/Kevin_Finn_CV.pdf" target="_blank">
                                 <span>
                                     <span
-                                        class="border-b border-transparent pb-px transition group-hover:border-teal-300 motion-reduce:transition-none">View/Download
-                                        <!-- -->
-                                    </span>
+                                        class="border-b border-transparent pb-px transition group-hover:border-teal-300 motion-reduce:transition-none">View/Download</span>
                                     <span class="whitespace-nowrap">
                                         <span
                                             class="border-b border-transparent pb-px transition group-hover:border-teal-300 motion-reduce:transition-none">CV</span>
@@ -95,6 +90,7 @@
                                 </span>
                             </a>
                         </div>
+
                         <div class="mt-8">
                             <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 mb-2">Socials</h2>
                         </div>
@@ -126,12 +122,89 @@
                                 </a>
                             </li>
                         </ul>
+
                         <div class="mt-8 mb-8">
                             <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 mb-2">Contact Me:</h2>
                             <a href="mailto:kevinfinn688@gmail.com">Send Me An Email</a>
                             <p>kevinfinn688@gmail.com</p>
                         </div>
+                        <div class="container mt-8">
+                            <!-- Grid layout with 3 columns and 2 rows -->
+                            <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 mb-2">Diploma:</h2>
+                            <div class="grid grid-cols-3 gap-4">
+
+                                <div class="flex justify-left bg-gray-300 h-48 gap-2">
+                                    <div data-iframe-width="150" data-iframe-height="270">
+                                        <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base"
+                                            href="static/cv/Full stack development.pdf" target="_blank"
+                                            rel="noreferrer noopener"
+                                            aria-label="Diploma for full stack development (opens in a new tab)">
+                                            <img alt="code institute Diploma" loading="lazy" width="200" height="48"
+                                                decoding="async" data-nimg="1"
+                                                class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                                                style="color:transparent" src="static/images/certs/code.png" />
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container mt-8">
+                            <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 mb-2">Certs:</h2>
+                            <div class="grid grid-cols-3 gap-4">
+                                <div class="flex justify-left bg-gray-300 h-48 gap-2">
+                                    <div>
+                                        <a href="static/cv/JAVA8OJA.jpg" target="_blank"
+                                            aria-label="Diploma for Java Programming(opens in a new tab)">
+                                            <img alt="code institute Diploma" src="static/images/certs/java_cert.png"
+                                                width="132px" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="flex justify-left bg-gray-300 h-48 gap-2">
+                                    <div>
+                                        <a href="https://www.credly.com/badges/34999c1a-56a7-46a9-9921-8d465c096a05/public_url"
+                                            target="_blank">
+                                            <img alt="" src="static/images/certs/it-specialist-python.png" /> </a>
+                                    </div>
+
+
+                                    <div class="flex justify-right bg-gray-300 h-48">
+                                        <div>
+                                            <a href="https://www.credly.com/badges/aab13392-a8f1-4f85-95c5-9c5f7e0f0446/public_url"
+                                                target="_blank">
+                                                <img alt="software development badge"
+                                                    src="static/images/certs/it-specialist-software-development.png" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="flex justify-left bg-gray-300 h-48 gap-2">
+                                    <div>
+                                        <a href="https://www.credly.com/badges/d0599b15-3915-4089-a79f-b74abb52cba1/public_url"
+                                            target="_blank">
+                                            <img alt="cybersecurity badge"
+                                                src="static/images/certs/introduction-to-cybersecurity.png" /> </a>
+                                    </div>
+                                    <div>
+                                        <a href="https://www.credly.com/badges/4949f154-5e16-4c8d-aa0d-154e10122444/public_url"
+                                            target="_blank">
+                                            <img alt="network badge" src="static/images/certs/networking-basics.png" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="flex justify-left bg-gray-300 h-48 gap-2">
+                                    <div>
+                                        <a href="https://www.credly.com/badges/8bd95a9e-b0ff-4565-a9e6-79d321b9cd83/public_url"
+                                            target="_blank">
+                                            <img alt="cybersecurity badge"
+                                                src="static/images/certs/cybersecurity-fundamentals.png" /> </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </header>
+
 
                     <main id="content" class="pt-24 lg:w-1/2 lg:py-24">
                         <section id="about" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
